--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,1 +1,2 @@
 public-f net.minecraft.world.entity.player.Player f_36093_ #inventory
+public net.minecraft.world.entity.Entity f_19804_ # entityData
