I'm crazy. Goodbye! I'm going to sleep

--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,7 @@ java {
 }
 
 minecraft {
-    mappings channel: 'official', version: '1.19.4'
+    mappings channel: 'official', version: "$mc_version"
 
     accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
 
@@ -127,16 +127,16 @@ repositories {
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.19.4-45.0.46'
+    minecraft "net.minecraftforge:forge:$mc_version-+"
 
-    implementation fg.deobf("net.blay09.mods:waystones-forge:13.1.0+1.19.4")
-    implementation fg.deobf("net.blay09.mods:waystones-common:13.1.0+1.19.4")
-
-    implementation fg.deobf("net.blay09.mods:balm-forge:6.0.2+1.19.4")
-    implementation fg.deobf("net.blay09.mods:balm-common:6.0.2+1.19.4")
-
-    implementation fg.deobf("top.theillusivec4.curios:curios-forge:1.19.4-5.1.5.3")
-    implementation fg.deobf("top.theillusivec4.curios:curios-forge:1.19.4-5.1.5.3:api")
+//    implementation fg.deobf("net.blay09.mods:waystones-forge:13.1.0+1.19.4")
+//    implementation fg.deobf("net.blay09.mods:waystones-common:13.1.0+1.19.4")
+//
+//    implementation fg.deobf("net.blay09.mods:balm-forge:6.0.2+1.19.4")
+//    implementation fg.deobf("net.blay09.mods:balm-common:6.0.2+1.19.4")
+//
+//    implementation fg.deobf("top.theillusivec4.curios:curios-forge:1.19.4-5.1.5.3")
+//    implementation fg.deobf("top.theillusivec4.curios:curios-forge:1.19.4-5.1.5.3:api")
 
     implementation("org.projectlombok:lombok:1.18.+") // mutable api version
 
