--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,2 +1,3 @@
-public-f net.minecraft.world.entity.player.Player f_36093_ #inventory
-public net.minecraft.world.entity.Entity f_19804_ # entityData
+# public-f net.minecraft.world.entity.player.Player f_36093_ #inventory
+# public net.minecraft.world.entity.Entity f_19804_ # entityData
+public net.minecraft.world.item.context.UseOnContext m_43718_()Lnet/minecraft/world/phys/BlockHitResult; # getHitResult
