--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,9 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 mc_version = 1.20
+# https://github.com/JetBrains/kotlin
+kotlin_version=1.9.0-Beta
+# https://github.com/Kotlin/kotlinx.coroutines
+coroutines_version=1.7.1
+# https://github.com/Kotlin/kotlinx.serialization
+serialization_version = 1.5.1
