--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,8 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-mc_version = 1.20
+mc_version = 1.20.1
+forge_version = 47.0.35
 # https://github.com/JetBrains/kotlin
 kotlin_version=1.9.0-Beta
 # https://github.com/Kotlin/kotlinx.coroutines
