--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,3 +1,5 @@
-# public-f net.minecraft.world.entity.player.Player f_36093_ #inventory
-# public net.minecraft.world.entity.Entity f_19804_ # entityData
-public net.minecraft.world.item.context.UseOnContext m_43718_()Lnet/minecraft/world/phys/BlockHitResult; # getHitResult
+public net.minecraft.client.gui.components.Button$Builder f_252401_ #message
+public net.minecraft.client.gui.components.Button$Builder f_252538_ #x
+public net.minecraft.client.gui.components.Button$Builder f_252462_ #y
+public net.minecraft.client.gui.components.Button$Builder f_252510_ #width
+public net.minecraft.client.gui.components.Button$Builder f_252447_ #height
