--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,11 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+kotlin.experimental.tryK2=true
 
 mc_version = 1.20.1
 forge_version = 47.0.35
 # https://github.com/JetBrains/kotlin
-kotlin_version=1.9.0-Beta
+kotlin_version=1.9.0
 # https://github.com/Kotlin/kotlinx.coroutines
 coroutines_version=1.7.1
 # https://github.com/Kotlin/kotlinx.serialization
