--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -3,3 +3,4 @@ public net.minecraft.client.gui.components.Button$Builder f_252538_ #x
 public net.minecraft.client.gui.components.Button$Builder f_252462_ #y
 public net.minecraft.client.gui.components.Button$Builder f_252510_ #width
 public net.minecraft.client.gui.components.Button$Builder f_252447_ #height
+public net.minecraft.client.renderer.RenderType$CompositeRenderType
