--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
-kotlin.experimental.tryK2=true
+#kotlin.experimental.tryK2=true
 
 mc_version = 1.20.1
 forge_version = 47.1.28
