Comit update of 2 days long

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,9 +12,10 @@ commonServerRunName=Common Server
 forgeVersion=47.1.28
 forgeAtsEnabled=false
 
-# Fabric
+# Fabric API's
 fabricVersion=0.86.1+1.20.1
 fabricLoaderVersion=0.14.21
+cloth = 11.1.106
 
 # Mod options
 modName=AncientMagic
