--- a/gradle.properties
+++ b/gradle.properties
@@ -1,31 +1,55 @@
+# Gradle
+org.gradle.jvmargs=-Xmx6G
+org.gradle.daemon=false
+
+javaVersion=17
+
 # Project
 version=1.0.0
 group=team.0mods
 
 # Common
-minecraftVersion=1.20.1
+minecraftVersion=1.20.4
 commonRunsEnabled=false
 commonClientRunName=Common Client
 commonServerRunName=Common Server
 
 # Forge
-forgeVersion=47.1.28
-forgeAtsEnabled=false
-kffVersion=4.6.2
+forgeVersion=49.0.19
+forgeAtsEnabled=true
 
-# Fabric API's
-fabricVersion=0.86.1+1.20.1
-fabricLoaderVersion=0.14.21
-cloth = 11.1.106
+# NeoForge
+parchmentMCVersion=1.20.3
+parchmentVersion=2023.12.31
+neoVersion=20.4.80-beta
+neoAtsEnabled=true
 
-# Mod options
-modName=Aeternus
-modAuthor=AlgorithmLX
-modId=aeternus
-
-# Gradle
-org.gradle.jvmargs=-Xmx3G
-org.gradle.daemon=false
+# Fabric APIs
+fabricVersion=0.93.1+1.20.4
+fabricLoaderVersion=0.15.3
+clothVersion=11.1.106
+klfVersion=1.10.17+kotlin.1.9.22
 
 # https://github.com/JetBrains/kotlin
-kotlin_version=1.9.10
+kotlin_version=1.9.22
+
+# COMMON FILE SETTINGS
+modName=Aeternus
+modId=aeternus
+description=Etherium-based magic mod
+license=All rights reserved
+credits=Thanks HollowHorizon, DizaGo Fox, Sigmarius, Goovy, _BENDY659_, _GuRmAn_ for help with development
+modAuthor=AlgorithmLX, HollowHorizon
+
+# FORGE & NEO FORGED FILE SETTINGS
+kffVersion=4.10.0
+modLoader=kotlinforforge
+mlVersion=[4.10,)
+mcRange=[1.20.4,1.21)
+kffRange=[4.10,)
+
+# FORGE FILE SETTINGS
+forgeVersionRange=[49,)
+
+# NEO FORGED FILE SETTINGS
+neoVersionRange=[20,)
