Book screen writing...

--- a/gradle.properties
+++ b/gradle.properties
@@ -36,7 +36,7 @@ modName=Aeternus
 modId=aeternus
 description=Etherium-based magic mod
 license=All rights reserved
-credits=Thanks HollowHorizon, DizaGo Fox, Sigmarius, Goovy, _BENDY659_, _GuRmAn_ for help with development
+credits=Thanks HollowHorizon for code help\\nDizaGo Fox for Textures\\nSigmarius\\nGoovy, _BENDY659_, _GuRmAn_ for Mod testing
 modAuthor=AlgorithmLX, HollowHorizon
 
 # FORGE & NEO FORGED FILE SETTINGS
