--- a/gradle.properties
+++ b/gradle.properties
@@ -15,8 +15,8 @@ minecraftVersion=1.20.4
 forgeVersion=49.0.19
 
 # NeoForge
-parchmentMCVersion=1.20.3
-parchmentVersion=2023.12.31
+parchmentMCVersion=1.20.4
+parchmentVersion=2024.04.14
 neoVersion=20.4.77-beta
 
 # Fabric APIs
@@ -26,14 +26,14 @@ clothVersion=11.1.106
 klfVersion=1.10.17+kotlin.1.9.22
 
 # https://github.com/JetBrains/kotlin
-kotlin_version=1.9.22
+kotlin_version=1.9.23
 
 # COMMON FILE SETTINGS
 modName=Aeternus
 modId=aeternus
 description=Etherium-based magic mod
 license=All rights reserved
-credits=Thanks HollowHorizon for code help\\nDizaGo Fox for Textures\\nSigmarius\\nGoovy, _BENDY659_, _GuRmAn_ for Mod testing
+credits=Thanks HollowHorizon for code help\\nDizaGo Fox for Textures\\nSigmarius for ideas\\nGoovy, _BENDY659_, _GuRmAn_ for Mod testing
 modAuthor=AlgorithmLX, HollowHorizon
 
 # FORGE & NEO FORGED FILE SETTINGS
