Migrate to architectury api

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,9 +7,11 @@ javaVersion=17
 # Project
 version=1.0.0
 group=team.0mods
+enabledPlatforms=fabric,forge,neoforge
 
 # Common
 minecraftVersion=1.20.4
+architecturyApiVersion=11.1.17
 
 # Forge
 forgeVersion=49.0.19
@@ -27,6 +29,10 @@ klfVersion=1.10.17+kotlin.1.9.22
 
 # https://github.com/JetBrains/kotlin
 kotlin_version=1.9.23
+# https://github.com/Kotlin/kotlinx.coroutines
+coroutines_version=1.7.3
+# https://github.com/Kotlin/kotlinx.serialization
+serialization_version = 1.6.2
 
 # COMMON FILE SETTINGS
 modName=Aeternus
