Try to add forgix

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,11 +2,13 @@
 org.gradle.jvmargs=-Xmx6G
 org.gradle.daemon=false
 
+kotlin.experimental.tryK2=true
+
 javaVersion=17
 
 # Project
-version=1.0.0
-group=team.0mods
+modVersion=1.0.0
+modGroup=team.0mods
 enabledPlatforms=fabric,forge,neoforge
 
 # Common
