--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,8 @@
 org.gradle.jvmargs=-Xmx6G
 org.gradle.daemon=false
 
-kotlin.experimental.tryK2=true
+kotlin.experimental.tryK2=false
+kotlin.incremental=false
 
 javaVersion=17
 
