--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,7 @@ org.gradle.daemon=false
 
 kotlin.experimental.tryK2=false
 kotlin.incremental=false
+kotlin.daemon.useFallbackStrategy=false
 
 javaVersion=17
 
