--- a/gradle.properties
+++ b/gradle.properties
@@ -11,6 +11,8 @@ javaVersion=17
 # Project
 modGroup=team.0mods
 enabledPlatforms=fabric,forge,neoforge
+# Valid types: alpha, beta, snapshot and release
+releaseType=alpha
 
 # Common
 minecraftVersion=1.20.4
