--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ javaVersion=17
 # Project
 modGroup=team.0mods
 enabledPlatforms=fabric,forge,neoforge
-# Valid types: alpha, beta, snapshot and release
+# Valid types: alpha, beta, snapshot or empty
 releaseType=alpha
 
 # Common
