--- a/.gitignore
+++ b/.gitignore
@@ -117,3 +117,12 @@ run/
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
 runs/
+
+!common/build/libs/aeternus.*.jar
+!common/build/libs/aeternus-alpha.*.jar
+!common/build/libs/aeternus-beta.*.jar
+!common/build/libs/aeternus-snapshot.*.jar
+common/build/libs/aeternus.*-*.jar
+common/build/libs/aeternus-alpha.*-*.jar
+common/build/libs/aeternus-beta.*-*.jar
+common/build/libs/aeternus-snapshot.*-*.jar
