--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -7,9 +7,7 @@ license="${license}"
     displayName="${modName}"
     credits="${credits}"
     authors="${modAuthor}"
-    description='''
-        ${description}
-    '''
+    description='''${description}'''
 [[dependencies.${modId}]]
     modId="forge"
     mandatory=true
