--- a/neoforge/src/main/resources/META-INF/mods.toml
+++ b/neoforge/src/main/resources/META-INF/mods.toml
@@ -7,9 +7,7 @@ version="${modVersion}"
 displayName="${modName}"
 credits="${credits}"
 authors="${modAuthor}"
-description='''
-        ${description}
-    '''
+description='''${description}'''
 [[dependencies.${modId}]]
     modId="forge"
     mandatory=true
