--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,6 @@
 org.gradle.jvmargs=-Xmx6G
 org.gradle.daemon=false
 
-kotlin.experimental.tryK2=false
 kotlin.incremental=false
 kotlin.daemon.useFallbackStrategy=true
 
@@ -14,9 +13,9 @@ enabledPlatforms=fabric,forge,neoforge
 # Valid types: alpha, beta, snapshot or empty
 releaseType=alpha
 imguiVersion=1.86.11
-kotlin_version=1.9.24
-coroutines_version=1.7.3
-serialization_version=1.6.2
+kotlinVersion=2.0.0
+coroutinesVersion=1.7.3
+serializationVersion=1.6.2
 
 # Common
 minecraftVersion=1.20.4
