--- a/gradle.properties
+++ b/gradle.properties
@@ -14,8 +14,8 @@ enabledPlatforms=fabric,forge,neoforge
 releaseType=alpha
 imguiVersion=1.86.11
 kotlinVersion=2.0.0
-coroutinesVersion=1.7.3
-serializationVersion=1.6.2
+coroutinesVersion=1.9.0-RC
+serializationVersion=1.7.0-RC
 
 # Common
 minecraftVersion=1.20.4
@@ -44,11 +44,9 @@ credits=Thanks HollowHorizon for code help\\nDizaGo Fox for Textures\\nSigmarius
 modAuthor=AlgorithmLX, HollowHorizon
 
 # FORGE & NEO FORGED FILE SETTINGS
-kffVersion=4.10.0
-modLoader=kotlinforforge
-mlVersion=[4.10,)
-mcRange=[1.20.4,1.21)
-kffRange=[4.10,)
+modLoader=javafml
+mlVersion=[49,)
+mcRange=[1.20.4,1.20.5)
 # FORGE FILE SETTINGS
 forgeVersionRange=[49,)
 
