--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ org.gradle.daemon=false
 kotlin.incremental=false
 kotlin.daemon.useFallbackStrategy=true
 
-javaVersion=17
+javaVersion=21
 
 # Project
 modGroup=team.0mods
@@ -14,26 +14,23 @@ enabledPlatforms=fabric,forge,neoforge
 releaseType=alpha
 imguiVersion=1.86.11
 kotlinVersion=2.0.0
-coroutinesVersion=1.9.0-RC
-serializationVersion=1.7.0-RC
 
 # Common
-minecraftVersion=1.20.4
-architecturyApiVersion=11.1.17
+minecraftVersion=1.20.6
+architecturyApiVersion=12.1.3
+parchmentMCVersion=1.20.6
+parchmentVersion=2024.06.02
 
 # Forge
-forgeVersion=49.0.19
+forgeVersion=50.1.3
 
 # NeoForge
-parchmentMCVersion=1.20.4
-parchmentVersion=2024.04.14
-neoVersion=20.4.77-beta
+neoVersion=20.6.115
 
 # Fabric APIs
-fabricVersion=0.93.1+1.20.4
-fabricLoaderVersion=0.15.3
+fabricVersion=0.100.0+1.20.6
+fabricLoaderVersion=0.15.11
 clothVersion=11.1.106
-klfVersion=1.10.17+kotlin.1.9.22
 
 # COMMON FILE SETTINGS
 modName=Aeternus
@@ -46,9 +43,9 @@ modAuthor=AlgorithmLX, HollowHorizon
 # FORGE & NEO FORGED FILE SETTINGS
 modLoader=javafml
 mlVersion=[49,)
-mcRange=[1.20.4,1.20.5)
+mcRange=[1.20.6,1.21)
 # FORGE FILE SETTINGS
-forgeVersionRange=[49,)
+forgeVersionRange=[50,)
 
 # NEO FORGED FILE SETTINGS
 neoVersionRange=[20,)
