--- a/gradle.properties
+++ b/gradle.properties
@@ -16,21 +16,20 @@ imguiVersion=1.86.11
 kotlinVersion=2.0.0
 
 # Common
-minecraftVersion=1.20.6
-architecturyApiVersion=12.1.3
-parchmentMCVersion=1.20.6
+minecraftVersion=1.21
+parchmentMCVersion=1.21
+# FIX MAPPINGS
 parchmentVersion=2024.06.02
 
 # Forge
-forgeVersion=50.1.3
+forgeVersion=51.0.16
 
 # NeoForge
-neoVersion=20.6.115
+neoVersion=21.0.21-beta
 
 # Fabric APIs
-fabricVersion=0.100.0+1.20.6
-fabricLoaderVersion=0.15.11
-clothVersion=11.1.106
+fabricVersion=0.100.3
+fabricLoaderVersion=0.15.9
 
 # COMMON FILE SETTINGS
 modName=Aeternus
@@ -43,7 +42,7 @@ modAuthor=AlgorithmLX, HollowHorizon
 # FORGE & NEO FORGED FILE SETTINGS
 modLoader=javafml
 mlVersion=[49,)
-mcRange=[1.20.6,1.21)
+mcRange=[1.21,1.21.1)
 # FORGE FILE SETTINGS
 forgeVersionRange=[50,)
 
